# -CRM-Lead-Alerts-Automation-with-CrewAI

./: .env.example  .gitignore  README.md  WORKSHOP_GUIDE.md  get_topic_id.py  pyproject.toml  test_notion_connection.py  test_telegram_alert.py
.github/workflows/: crm_alerts.yml
src/bot1/: crew.py  main.py
src/bot1/config/: agents.yaml  tasks.yaml
src/bot1/tools/: notion_tool.py  telegram_tool.py
