[project]
name = "bot1"
version = "0.1.0"
description = "bot1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2",
    "notion-client>=2.2.1",
    "python-telegram-bot>=21.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
bot1 = "bot1.main:run"
run_crew = "bot1.main:run"
crm_alerts = "bot1.main:run_crm_alerts"
train = "bot1.main:train"
replay = "bot1.main:replay"
test = "bot1.main:test"
run_with_trigger = "bot1.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
